external-crates/move/crates/move-compiler/tests/move_check/parser/invalid_pack_mname_non_addr.move
module 0x42::M {
    struct S {}
    fun foo() {
        false::M::S { }
    }

    fun bar() {
        fun baz()::baz()::M::S { }
    }
}
